// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateClusterPage /> Quota not fetched yet should render 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    variant="light"
  >
    <Spinner
      centered={true}
    />
  </PageSection>
</AppPage>
`;

exports[`<CreateClusterPage /> User with no quota should render 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    className="cluster-create-page"
    variant="light"
  >
    <Tabs
      activeKey={0}
      backScrollAriaLabel="Scroll back"
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      isBox={false}
      isFilled={true}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={false}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={false}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <CloudIcon />
            </TabTitleIcon>
            <TabTitleText>
              Cloud
            </TabTitleText>
          </React.Fragment>
        }
      >
        <CloudTab
          hasOSDQuota={false}
          trialEnabled={false}
        />
      </Tab>
      <Tab
        eventKey={1}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <ServerIcon />
            </TabTitleIcon>
            <TabTitleText>
              Datacenter
            </TabTitleText>
          </React.Fragment>
        }
      >
        <DatacenterTab />
      </Tab>
      <Tab
        eventKey={2}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <LaptopIcon />
            </TabTitleIcon>
            <TabTitleText>
              Local
            </TabTitleText>
          </React.Fragment>
        }
      >
        <LocalTab
          token={Object {}}
        />
      </Tab>
    </Tabs>
  </PageSection>
</AppPage>
`;

exports[`<CreateClusterPage /> renders correctly 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    className="cluster-create-page"
    variant="light"
  >
    <Tabs
      activeKey={0}
      backScrollAriaLabel="Scroll back"
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      isBox={false}
      isFilled={true}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={false}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={false}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <CloudIcon />
            </TabTitleIcon>
            <TabTitleText>
              Cloud
            </TabTitleText>
          </React.Fragment>
        }
      >
        <CloudTab
          hasOSDQuota={true}
          trialEnabled={false}
        />
      </Tab>
      <Tab
        eventKey={1}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <ServerIcon />
            </TabTitleIcon>
            <TabTitleText>
              Datacenter
            </TabTitleText>
          </React.Fragment>
        }
      >
        <DatacenterTab />
      </Tab>
      <Tab
        eventKey={2}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <LaptopIcon />
            </TabTitleIcon>
            <TabTitleText>
              Local
            </TabTitleText>
          </React.Fragment>
        }
      >
        <LocalTab
          token={Object {}}
        />
      </Tab>
    </Tabs>
  </PageSection>
</AppPage>
`;

exports[`<CreateClusterPage /> renders correctly for specific tabs cloud tab 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    className="cluster-create-page"
    variant="light"
  >
    <Tabs
      activeKey={0}
      backScrollAriaLabel="Scroll back"
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      isBox={false}
      isFilled={true}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={false}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={false}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <CloudIcon />
            </TabTitleIcon>
            <TabTitleText>
              Cloud
            </TabTitleText>
          </React.Fragment>
        }
      >
        <CloudTab
          hasOSDQuota={true}
          trialEnabled={false}
        />
      </Tab>
      <Tab
        eventKey={1}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <ServerIcon />
            </TabTitleIcon>
            <TabTitleText>
              Datacenter
            </TabTitleText>
          </React.Fragment>
        }
      >
        <DatacenterTab />
      </Tab>
      <Tab
        eventKey={2}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <LaptopIcon />
            </TabTitleIcon>
            <TabTitleText>
              Local
            </TabTitleText>
          </React.Fragment>
        }
      >
        <LocalTab
          token={Object {}}
        />
      </Tab>
    </Tabs>
  </PageSection>
</AppPage>
`;

exports[`<CreateClusterPage /> renders correctly for specific tabs datacenter tab 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    className="cluster-create-page"
    variant="light"
  >
    <Tabs
      activeKey={1}
      backScrollAriaLabel="Scroll back"
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      isBox={false}
      isFilled={true}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={false}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={false}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <CloudIcon />
            </TabTitleIcon>
            <TabTitleText>
              Cloud
            </TabTitleText>
          </React.Fragment>
        }
      >
        <CloudTab
          hasOSDQuota={true}
          trialEnabled={false}
        />
      </Tab>
      <Tab
        eventKey={1}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <ServerIcon />
            </TabTitleIcon>
            <TabTitleText>
              Datacenter
            </TabTitleText>
          </React.Fragment>
        }
      >
        <DatacenterTab />
      </Tab>
      <Tab
        eventKey={2}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <LaptopIcon />
            </TabTitleIcon>
            <TabTitleText>
              Local
            </TabTitleText>
          </React.Fragment>
        }
      >
        <LocalTab
          token={Object {}}
        />
      </Tab>
    </Tabs>
  </PageSection>
</AppPage>
`;

exports[`<CreateClusterPage /> renders correctly for specific tabs local tab 1`] = `
<AppPage
  title="Create an OpenShift cluster | Red Hat OpenShift Cluster Manager"
>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Cluster Type",
            },
          ]
        }
      />
    }
    title="Select an OpenShift cluster type to create"
  />
  <PageSection
    className="cluster-create-page"
    variant="light"
  >
    <Tabs
      activeKey={2}
      backScrollAriaLabel="Scroll back"
      component="div"
      forwardScrollAriaLabel="Scroll forward"
      hasNoBorderBottom={false}
      isBox={false}
      isFilled={true}
      isSecondary={false}
      isVertical={false}
      leftScrollAriaLabel="Scroll left"
      mountOnEnter={false}
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      rightScrollAriaLabel="Scroll right"
      unmountOnExit={false}
      variant="default"
    >
      <Tab
        eventKey={0}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <CloudIcon />
            </TabTitleIcon>
            <TabTitleText>
              Cloud
            </TabTitleText>
          </React.Fragment>
        }
      >
        <CloudTab
          hasOSDQuota={true}
          trialEnabled={false}
        />
      </Tab>
      <Tab
        eventKey={1}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <ServerIcon />
            </TabTitleIcon>
            <TabTitleText>
              Datacenter
            </TabTitleText>
          </React.Fragment>
        }
      >
        <DatacenterTab />
      </Tab>
      <Tab
        eventKey={2}
        title={
          <React.Fragment>
            <TabTitleIcon>
              <LaptopIcon />
            </TabTitleIcon>
            <TabTitleText>
              Local
            </TabTitleText>
          </React.Fragment>
        }
      >
        <LocalTab
          token={Object {}}
        />
      </Tab>
    </Tabs>
  </PageSection>
</AppPage>
`;
